[gd_scene load_steps=3 format=3 uid="uid://b8ibs632ykel5"]

[ext_resource type="Script" path="res://ui/main_menu/main_menu.gd" id="1"]
[ext_resource type="Theme" uid="uid://bxa6m86764q1f" path="res://ui/theme/sociedad_theme.tres" id="1_q75p3"]

[node name="lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_q75p3")
script = ExtResource("1")

[node name="background" type="ColorRect" parent="."]
layout_mode = 0
anchor_left = 0.35
anchor_top = 0.25
anchor_right = 0.65
anchor_bottom = 0.75
theme = ExtResource("1_q75p3")
color = Color(0.223529, 0.223529, 0.223529, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.4
anchor_top = 0.3
anchor_right = 0.6
anchor_bottom = 0.525
theme_override_constants/separation = 15

[node name="name" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_q75p3")
text = "Brochacho"
max_length = 16

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("1_q75p3")
color = Color(1, 1, 1, 1)
edit_alpha = false

[node name="ip" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_q75p3")
text = "26.31.90.96"

[node name="joinButton" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.4
anchor_top = 0.575
anchor_right = 0.6
anchor_bottom = 0.625
theme = ExtResource("1_q75p3")
text = "Connect"

[node name="hostButton" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.4
anchor_top = 0.65
anchor_right = 0.6
anchor_bottom = 0.7
theme = ExtResource("1_q75p3")
text = "Host"

[node name="ColorPicker" type="ColorPicker" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.67
anchor_top = 0.1
anchor_right = 0.67
anchor_bottom = 0.1
offset_left = 80.0
offset_top = 40.0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_q75p3")
edit_alpha = false
picker_shape = 2
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true

[connection signal="text_changed" from="VBoxContainer/name" to="." method="_on_name_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/ip" to="." method="_on_ip_text_submitted"]
[connection signal="pressed" from="joinButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="hostButton" to="." method="_on_hostButton_pressed"]
[connection signal="color_changed" from="ColorPicker" to="." method="_on_ColorPicker_color_changed"]
